Sun Mar 16 10:18:28 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* sanity.sh (death2): Replace regexp matching temporary file name
	with new variable ${tempname}.  For most of the tests this is a
	cosmetic change, but death2-diff-6 had been missing _ which caused
	it to fail on Solaris (at least sometimes).

	* sanity.sh (modes): Don't use export -n; it doesn't seem
	to be sufficiently portable.

	* version.c: Change version number to 1.9.5.

	* version.c: Version 1.9.4.

	* rcscmds.c (RCS_checkin): Preserve the mode of the rcsfile.
	RCS_CI usually, but not always, does this for us.
	* commit.c (fix_rcs_modes): Replace algorithm with a more
	CVSUMASK-friendly one.
	* sanity.sh (modes): Update tests modes-5, modes-7, modes-10, and
	modes-15 so they test that CVSUMASK is honored.

Sun Mar 16 10:18:28 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* sanity.sh (modes): New tests modes-7a and modes-7b test behavior
	if one manually changes the modes in the repository.

	* server.c (server): Revise code which checks for errors creating
	temporary directory.  This won't solve the intermittent
	  can't create temporary directory
	  Unknown error -1
	but it will mean (a) the right message based on errno gets
	printed, instead of "unknown error -1", and (b) the message says
	that it happened in chmod instead of mkdir_p.

Sat Mar 15 16:47:12 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* sanity.sh (modes): New tests.  Note that (for now) these are
	just testing how CVS already behaves; I want to record that before
	I move on to changing CVS's behavior with modes of RCS files.

13 Mar 1997  Jim Kingdon

	* subr.c (line2argv): Change argv_allocated from size_t to int.

Wed Mar 12 22:16:44 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* add.c (add_directory): If repository has an extraneous "."
	directory at the end, strip it off.  This fixes a bug which was
	introduced when strip_path was nuked (this fix is much more